--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@hello-pangea/dnd": "^18.0.1",
     "axios": "^1.12.2",
     "cloudinary": "^1.41.3",
     "lucide-react": "^0.553.0",
